# PyADScopeControl

./: .gitignore  ADScope.py  CITATION.cff  README.md  pyinstaller.yml  pyproject.toml  requirements.txt
.github/workflows/: pyinstaller.yml  python-publish.yml
examples/: config.yaml  main.py
src/: ADScope.spec  setup.py
src/ADScopeControl/: Helpers.py  __init__.py
src/ADScopeControl/controller/: BaseADScopeController.py  sweepHelpers.py
src/ADScopeControl/controller/DeviceInformation/: HWConnectedDeviceInformation.py  HWDeviceInformation.py
src/ADScopeControl/model/submodels/: AD2CaptDeviceCapturingModel.py
src/ADScopeControl/view/: AD2CaptDeviceView.py
src/CaptDeviceControl/: CaptDeviceConfig.py  __init__.py  resources_rc.py
src/CaptDeviceControl/adcaptdevicecontrol/: README.md  __init__.py  __main__.py
src/CaptDeviceControl/controller/: AD2CaptDeviceController.py  AD2CaptDeviceSimulator.py  BaseAD2CaptDevice.py
src/CaptDeviceControl/controller/DeviceInformation/: AnalogOutChannel.py  HWConnectedDeviceInformation.py  HWDeviceBase.py  HWDeviceInformation.py  WaveFormsAPI.py
src/CaptDeviceControl/controller/DeviceInformation/dataclasses/: AnalogInChannelInfo.py
src/CaptDeviceControl/controller/mp_AD2Capture/: AD2StateMPSetter.py  MPCaptDevice.py  MPCaptDeviceControl.py  MPDeviceControl.py
src/CaptDeviceControl/model/: AD2CaptDeviceInformationModel.py  AD2CaptDeviceModel.py  AD2CaptDeviceProperties.py  AD2CaptDeviceSignals.py  AD2Constants.py
src/CaptDeviceControl/model/submodels/: AD2CaptDeviceAnalogInModel.py  AD2CaptDeviceCapturingModel.py  AD2CaptDeviceInformationModel.py
src/CaptDeviceControl/old/controller/: AD2CaptDeviceController.py  AD2CaptDeviceSimulator.py  BaseAD2CaptDevice.py
src/CaptDeviceControl/old/controller/mp_AD2Capture/: AD2StateMPSetter.py  MPDeviceControl.py
src/CaptDeviceControl/old/model/: AD2CaptDeviceModel.py
src/CaptDeviceControl/old/resources/: AD2ControlWindow.ui
src/CaptDeviceControl/old/view/: AD2CaptDeviceView.py  Ui_AD2ControlWindow.py
src/CaptDeviceControl/old/view/widget/: WidgetCapturingInformation.py
src/CaptDeviceControl/resources/: AD2ControlWindow.ui  AD2ControlWindowNew.ui  resources.qrc
src/CaptDeviceControl/view/: AD2CaptDeviceView.py  Ui_AD2ControlWindow.py  Ui_AD2ControlWindowNew.py  Ui_title_area.py
src/CaptDeviceControl/view/widget/: WidgetCapturingInformation.py
tests/: ad2_aquisition_device.py
tests/tests/: ad2_aquisition_device.py  record.csv
