[project]
name = "captdevicecontrol"
version = "1.0.0"
authors = [
  { name="Christoph Schmidt", email="cschmidt.fs@gmail.com" },
]
description = "A UI for controlling the Analog Discovery Series"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'matplotlib',
    'numpy',
    'pandas',
    'PySide6',
    'scipy',
    'rich',
    'pyqtgraph',
    'fswidgets@git+https://github.com/agentsmith29/fstools.fswidgets.git@develop',
    'confighandler@git+https://github.com/agentsmith29/fstools.confighandler.git@develop',
    'cmp@git+https://github.com/agentsmith29/fstools.cmp.git@develop'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.tugraz.at/flexsensor-public/captdevicecontrol"