[project]
name = "captdevicecontrol"
version = "1.1.2"
authors = [
  { name="Christoph Schmidt", email="cschmidt.fs@gmail.com" },
]
description = "A UI for controlling the Analog Discovery Series"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'matplotlib',
    'numpy',
    'pandas',
    'PySide6',
    'scipy',
    'rich',
    'pyqtgraph',
    'pandasgui',
    'fswidgets@git+https://github.com/agentsmith29/fstools.fswidgets',
    'confPy6',
    'mpPy6'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.tugraz.at/flexsensor-public/captdevicecontrol"
